<resources>
    <string name="app_name">Conversor de Moedas</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Logo">Imagem da logo do aplicatico</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="tipoMoeda">TIPO MOEDA</string>
    <string name="exValor">Ex: 10.00</string>
    <string name="moedaDesejada">MOEDA DESEJADA</string>
    <string name="novoValor">Novo Valor</string>
    <string name="converter">Converter</string>
    <string name="moeda1">Moeda 1</string>
    <string name="moeda2">Moeda 2</string>
    <string name="exValor1">100.00</string>
    <string name="exValor2">200</string>
    <string name="imagemConversao">Setas indicando a conversão dos valores</string>
    <string name="imagemSlide1">Menina segurando um celular e um computador</string>
    <string name="imagemSlide2">Globo terrestre simbolizando o fluxo monetário</string>
    <string name="textoTitulo">Crie sua conta grátis</string>
    <string name="TextoLogar">Fazer login</string>
    <string name="fabConversao">Ver histórico</string>
</resources>
